// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="dismissable-alert-wrapper"
>
  <Alert
    className="dismissable-alert-banner"
    display="banner"
    variant="info"
  >
    <div
      className="display-flex-center dismissable-alert-content"
    >
      <div
        className="flex-1"
      >
        <div>
          My content
        </div>
      </div>
      <ButtonIcon
        aria-label="alert.dismiss"
        onClick={[Function]}
      >
        <ClearIcon
          size={12}
          thin={true}
        />
      </ButtonIcon>
    </div>
  </Alert>
</div>
`;

exports[`should render correctly with a non-default display 1`] = `
<div
  className="dismissable-alert-wrapper"
>
  <Alert
    className="dismissable-alert-block"
    display="block"
    variant="info"
  >
    <div
      className="display-flex-center dismissable-alert-content"
    >
      <div
        className="flex-1"
      >
        <div>
          My content
        </div>
      </div>
      <ButtonIcon
        aria-label="alert.dismiss"
        onClick={[Function]}
      >
        <ClearIcon
          size={12}
          thin={true}
        />
      </ButtonIcon>
    </div>
  </Alert>
</div>
`;
